增加四元数检查

--- a/config.json
+++ b/config.json
@@ -1,10 +1,13 @@
 {
     "ser_baud": [
+        921600,
+        1000000,
         2000000,
         1152000,
-        1000000,
         115200,
         941176,
         9600
-    ]
+    ],
+    "std_odr": 1000,
+    "euler_own_cal": true
 }
