--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         941176,
         9600
     ],
-    "refresh_rate": 3,
+    "refresh_rate": 1,
     "euler_own_cal": false,
-    "get_cal_state_en": true
+    "get_cal_state_en": true,
+    "display_angle_ref": false
 }
